# brhama

./: .env.example  .gitignore  AGENTS.md  README.md  package.json
adios/: get_pool.js  package-lock.json  package.json
adios/src/app/: globals.css  layout.tsx
adios/src/app/(landing)/: landing.css  layout.tsx  page.tsx
adios/src/app/dashboard/: layout.tsx  page.tsx
adios/src/components/guardian/: ActivityLog.tsx  AgentPanel.tsx  ControlPanel.tsx  EvacuationPanel.tsx  RiskGauge.tsx  StatsCards.tsx  TickChart.tsx
adios/src/components/landing/: animated-noise.tsx  colophon-section.tsx  hero-section.tsx  highlight-text.tsx  principles-section.tsx  scramble-text.tsx  side-nav.tsx  signals-section.tsx  (+3 more)
adios/src/hooks/: useDelegation.ts  usePosition.ts  useSmartAccount.ts
adios/src/types/: index.ts
apps/agents/: config.py  main.py  package.json  pyproject.toml  requirements.txt
apps/agents/agents/: graph.py  state.py
apps/agents/agents/nodes/: agent_spawner.py  budget_guardian.py  ceo_planner.py  delegation_manager.py  evaluator.py  executor.py  github_watcher.py  payroll.py  scorer.py  task_executor.py
apps/agents/agents/tools/: github_api.py  onchain_client.py  openrouter.py
apps/agents/models/: contribution.py  reward.py
apps/agents/routers/: agents.py  webhooks.py
apps/agents/scheduler/: jobs.py
apps/web/: package.json  tailwind.config.ts
contract/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contract/contracts/: YieldCaveatEnforcer.sol
contract/ignition/modules/: YieldCaveatEnforcer.ts
contract/scripts/: deploy.ts
(+63 files in other folders)
